force-app/main/default/objects/Yearly_Revenue_Schedule__c/Yearly_Revenue_Schedule__c.object-meta.xml
<CustomObject>
    <description>MYSALES-450</description>
    <label>Yearly Revenue Schedule</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Yearly Revenue Schedules</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>