force-app/main/default/objects/Yearly_Revenue_Schedule__c/fields/ContractYear__c.field-meta.xml
<CustomField>
    <fullName>ContractYear__c</fullName>
    <formula>TEXT(YEAR(ContractYearDate__c))</formula>
    <label>Contract Year</label>
    <type>Text</type>
</CustomField>