force-app/main/default/objects/Yearly_Revenue_Schedule__c/fields/ContractYearDate__c.field-meta.xml
<CustomField>
    <fullName>ContractYearDate__c</fullName>
    <label>Contract Year(Date)</label>
    <required>true</required>
    <type>Date</type>
</CustomField>