force-app/main/default/objects/Yearly_Revenue_Schedule__c/fields/Delivery_probability__c.field-meta.xml
<CustomField>
    <fullName>Delivery_probability__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery probability Id</label>
    <referenceTo>Delivery_Probabiliy__c</referenceTo>
    <relationshipLabel>Yearly Revenue Schedules</relationshipLabel>
    <relationshipName>Yearly_Revenue_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>