force-app/main/default/objects/Yearly_Revenue_Schedule__c/fields/First_Half_100M__c.field-meta.xml
<CustomField>
    <fullName>First_Half_100M__c</fullName>
    <formula>FirstHalf__c / 100000000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Half(/100M)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>