force-app/main/default/objects/Yearly_Revenue_Schedule__c/fields/FirstHalf__c.field-meta.xml
<CustomField>
    <fullName>FirstHalf__c</fullName>
    <formula>M1__c + M2__c + M3__c + M4__c + M5__c + M6__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Half</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>