force-app/main/default/objects/Yearly_Revenue_Schedule__c/fields/M10__c.field-meta.xml
<CustomField>
    <fullName>M10__c</fullName>
    <label>Oct.</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>