force-app/main/default/objects/Yearly_Revenue_Schedule__c/fields/M11__c.field-meta.xml
<CustomField>
    <fullName>M11__c</fullName>
    <label>Nov.</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>