force-app/main/default/objects/Yearly_Revenue_Schedule__c/fields/M11_Div8__c.field-meta.xml
<CustomField>
    <fullName>M11_Div8__c</fullName>
    <formula>M11__c / 100000000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nov.(/100M)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>