force-app/main/default/objects/Yearly_Revenue_Schedule__c/fields/M12__c.field-meta.xml
<CustomField>
    <fullName>M12__c</fullName>
    <label>Dec.</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>