force-app/main/default/objects/Yearly_Revenue_Schedule__c/fields/OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Id</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Yearly Revenue Schedules</relationshipLabel>
    <relationshipName>Yearly_Revenue_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>