force-app/main/default/objects/Yearly_Revenue_Schedule__c/fields/SecondHalf__c.field-meta.xml
<CustomField>
    <fullName>SecondHalf__c</fullName>
    <formula>M7__c + M8__c + M9__c + M10__c + M11__c + M12__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Second Half</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>