force-app/main/default/objects/Yearly_Revenue_Schedule__c/fields/X1Q_100M__c.field-meta.xml
<CustomField>
    <fullName>X1Q_100M__c</fullName>
    <formula>X1Q__c / 100000000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>1Q(/100M)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>