force-app/main/default/objects/Yearly_Revenue_Schedule__c/fields/X1Q__c.field-meta.xml
<CustomField>
    <fullName>X1Q__c</fullName>
    <formula>M1__c + M2__c + M3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>1Q</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>