force-app/main/default/objects/Yearly_Revenue_Schedule__c/fields/X2Q__c.field-meta.xml
<CustomField>
    <fullName>X2Q__c</fullName>
    <formula>M4__c + M5__c + M6__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>2Q</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>