force-app/main/default/objects/Yearly_Revenue_Schedule__c/fields/X3Q_100M__c.field-meta.xml
<CustomField>
    <fullName>X3Q_100M__c</fullName>
    <formula>X3Q__c / 100000000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>3Q(/100M)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>