force-app/main/default/objects/Yearly_Revenue_Schedule__c/fields/X3Q__c.field-meta.xml
<CustomField>
    <fullName>X3Q__c</fullName>
    <formula>M7__c + M8__c + M9__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>3Q</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>