force-app/main/default/objects/Yearly_Revenue_Schedule__c/fields/Yearly_100M__c.field-meta.xml
<CustomField>
    <fullName>Yearly_100M__c</fullName>
    <formula>Yearly__c / 100000000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Yearly(/100M)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>