force-app/main/default/objects/Yearly_Revenue_Schedule__c/fields/Yearly__c.field-meta.xml
<CustomField>
    <fullName>Yearly__c</fullName>
    <formula>M1__c + M2__c + M3__c + M4__c + M5__c + M6__c + M7__c + M8__c + M9__c + M10__c + M11__c + M12__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Yearly</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>